--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
     <div class="container">
         <div class="profile-container">
-            <img src="C:\Users\HP\OneDrive\Desktop\test 1\profile.png" alt="My Profile" class="profile-image">
+            <img src="profile.png" alt="My Profile" class="profile-image">
             <h1>Hi, I'm MoonLight Boy !</h1>
             <p class="bio">I’m a writer, creative thinker, and digital artist passionate about storytelling and design.</p>
         </div>
